kubernetes/controller/gateway_api.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: leprecon-gateway
  namespace: leprecon
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: 127.0.0.1
      protocol: HTTP
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: leprecon
spec:
  parentRefs:
    - name: leprecon-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /account
        - path:
            type: PathPrefix
            value: /user
        - path:
            type: PathPrefix
            value: /status
        - path:
            type: PathPrefix
            value: /delay
      backendRefs:
        - name: account
          port: 8000
